postman notes path and baseurl

--- a/postmannote/1.main.md
+++ b/postmannote/1.main.md
@@ -54,3 +54,69 @@ working with api before was
 
 - now a days we use postman
 
+![alt text](image.png)
+The client is the agent making a request. A client could be a browser or an application you have coded, for example. In our case Postman is the client because that's how we sent the request. 
+
+The request is sent over a network to some server. In our case, we made a request over the public internet to a server located at the address https://library-api.postmanlabs.com. 
+
+The server interpreted the request (GET /books) and sent the appropriate response over the network back to the Postman client: a list of books.
+
+>protocol:https://	
+
+>host: library-api.postman.labs.com	/
+
+>path:/books
+
+# Variables in Postman
+Postman allows you to save values as variables to reuse them and easily hide sensitive information like API Keys. 
+
+- We will use a variable to replace our base URL so that we don't have to type that repeatedly. Once a variable is defined, you can access its value using double curly brace syntax like this: 
+{{variableName}}
+
+### Set the "baseUrl" variable
+1. Go to the "get books" request in your collection.
+2. With your cursor, select the entire base URL of the API (https://library-api.postmanlabs.com). Do not include the slash / after .com.
+![alt text](image-1.png)
+3. Click "Set as variable" to save the base URL to a variable.
+>{{baseurl}}/books
+
+# Where are my variables?
+You can find Collection variables in your collection.
+
+Click on your collection, then the Variables tab. Here you can view and edit your variables.
+![alt text](image-2.png)
+- Initial Value - the value initially set when someone forks or imports your collection. Note that if you share your collection with others, they will see this value, so don't put any secrets here!
+
+- Current Value - Postman always resolves the variable to this value. This is local to your Postman account, and not public. It is good to keep secrets like API Keys ONLY in this column and not include them in the Initial Value column.
+
+# Query parameter
+Query parameters are added to the end of the path. They start with a question mark ?, followed by the key-value pairs in the format: <key>=<value>
+> GET https://some-api.com/photos?orientation=landscape
+- If there are multiple query parameters, each is separated by an ampersand &.
+>GET https://some-api.com/photos?orientation=landscape&size=500x400
+
+- This request adds a search term as a query parameter q=postman ("q" refers to "query" here) to the GET /search path on Google's server.
+![alt text](image-3.png)
+at param write the key and val
+
+### multiple parameter
+![alt text](image-4.png)
+
+# Path Variable
+Another way of passing request data to an API is via path variables (a.k.a. "path parameters"). A path variable is a dynamic section of a path and is often used for IDs and entity names such as usernames. 
+>https://api.github.com/users/tenzdelek
+
+- Note that some API documentation uses colon syntax to represent a wildcard in the path like /users/:username, while some use curly braces like /users/{username}. They both mean the same thing: that part of the path is dynamic!
+
+>{{baseurl}}/books/:id
+the : will create params key id in it and we have t give the value and run it
+- You can see that Postman has inserted the book id as a path parameter in place of the :id placeholder when making the request. Cool!
+
+## dont get confuse by path parameter
+A dynamic endpoint would include path parameters
+>How many path parameters are in this documented endpoint?
+
+
+>GET https://library-api.postmanlabs.com/books
+
+here there is 0 path parameter . path parameter are denoted by {} or :
