final note for postman certification

--- a/postmannote/1.main.md
+++ b/postmannote/1.main.md
@@ -120,3 +120,106 @@ A dynamic endpoint would include path parameters
 >GET https://library-api.postmanlabs.com/books
 
 here there is 0 path parameter . path parameter are denoted by {} or :
+
+# Post
+- we will learn how to add a book via POST request with a JSON Body to submit book data to our Postman Library API database.
+### But what is the Body?
+- You will need to send body data with requests whenever you need to add or update structured data.
+
+Some APIs require Authorization (aka Auth) for certain endpoints in order to permit a request.
+![alt text](image-5.png)
+# Authorization
+Think about why you might not want an API to have completely open endpoints that anyone can access publicly. It would allow unauthorized people to access data they shouldn't see, or allow bots to flood an API with thousands of calls per second and shut it down. 
+- There are multiple methods for authorizing a request. Some examples are 
+1. Basic Auth (username and password),
+2. OAuth (delegated authorization), and 
+3. API Keys (secret strings registered to a developer from an API portal). 
+
+# Getting an API Key
+APIs that use API Key auth usually allow developers to sign up in a developer portal, where they will receive a random API Key that can be used to authorize their requests to the API. The API Key allows the API to track who is making calls and how often.
+>we added apikey and it value in header
+![alt text](image-6.png)
+# Headers
+Headers are how we can add metadata about our requests, such as authorization information or specify the data type we want to receive in a response. This is different than the actual payload data we send in the body of a request, such as our new book information.
+
+> You can think of headers like the outside of an envelope when you send a letter. The envelope has information about delivering the letter, like proof that you've paid for postage. The actual data "payload" is the letter inside the envelope.
+# Add Auth to the Collection
+The Postman Auth helper can help you add authorization at the request, folder or collection level.
+ - instead of adding to each file we added at colletion
+ ![alt text](image-7.png)
+ All requests inside this collection that use the auth method "Inherit from parent" will have this header attached, and therefore be authorized.
+
+ - make sure the auth in child file is set to inherit the parent
+ ![alt text](image-8.png)
+
+# Variable scopes
+You can set variables that live at various scopes. Postman will resolve to the value at the nearest and narrowest scope.
+
+From broadest to narrowest, these scopes are global, collection, environment, data, and local.
+
+![alt text](image-9.png)
+>If a variable with the same name is declared in two different scopes, the value stored in the variable with narrowest scope will be used. For example, if there is a global variable named username and a local variable named username, the local value will be used when the request runs.
+
+# Scripting in Postman
+Postman allows you to add automation and dynamic behaviors to your collections with scripting.
+
+- Postman will automatically execute any provided scripts during two events in the request flow:
+
+- Immediately before a request is sent: pre-request script (Pre-request Script of Scripts tab).
+Immediately after a response comes back: post-response script (Post-response of Scripts tab).
+
+# The pm object
+- Postman has a helper object named pm that gives you access to data about your Postman environment, requests, responses, variables and testing utilities. 
+
+- For example, you can access the JSON response body from an API with: 
+
+>pm.response.json()
+
+You can also programmatically get collection variables like the value of baseUrl with:
+
+>pm.collectionVariables.get(“baseUrl”)
+
+In addition to getting variables, you can also set them with pm.collectionVariables.set("variableName", "variableValue") like this:
+
+>pm.collectionVariables.set(“myVar”, “foo”)
+
+# Add a script to your request
+1. In your "add a book" request, change the book data in your Body to a new book you like.
+
+2. From the Scripts tab of your request, open the Post-res tab (short for Post-response)
+
+3. Inside the Script editor, add this JavaScript code to log the JSON response from the API:
+>console.log(pm.response.json())
+![alt text](image-10.png)
+so in console you can see it
+![alt text](image-11.png)
+
+# Setting and getting collection variables
+The pm object allows you to set and get collection variables.
+
+- To set a collection variable, use the .set() method with two parameters: the variable name and the variable value
+
+>pm.collectionVariables.set("variableName", value)
+
+- To get a collection variable use the .get() method and specify the name of the variable you want to retrieve:
+
+>pm.collectionVariables.get("variableName")
+
+
+![alt text](image-12.png)
+after we run this we get:
+![alt text](image-13.png)
+now this can be used all over the children
+![alt text](image-14.png)
+
+# Patch
+updating
+![alt text](image-15.png)
+![alt text](image-16.png)
+
+# Delete
+- delete is same
+![alt text](image-17.png)
+# code snippet
+you can use code snippet to do it from many other platform
+![alt text](image-18.png)
